@@ -3,18 +3,18 @@
 ### slFtp is an open-source, multithreaded FTP client with native Linux and Windows support, designed for the "scene".
 
 # Features:
-- FTP client, including 
+- FTP client, including
     * sitemanager
     * SSL/TLS support
-    * SSLFXP (turned on automaticly if needed)
+    * SSLFXP (turned on automatically if needed)
     * per site IO/connect timeouts
-- Auto based on 
+- Autotrading based on
     * IRC announce
     * dirlisting
 - Highly configurable skiplists
 - Dynamically rebuild transfer chains based on allowed/complete status of sites
-- XDUPE support
-- Condition based rule sets for sites/sections with +50 conditions, including 
+- X-DUPE support
+- Condition based rule sets for sites/sections with 50+ conditions, including
     + MP3
         * genre
         * year
@@ -30,23 +30,22 @@
     * SSL
     * blowfish (ECB & CBC)
 - Highly configurable precatcher
-- Genre support for MP3 
-    * IRC based and dirlist based
+- Genre detection support for MP3
+    * IRC and dirlist based
 - Genre support for MDVDR/MVID
     * by fetching and parsing nfo file
-- Fake checking with many builtin rules
+- Fake checking with many built-in rules
 - Affil lists, site infos, racing stats and more
 - Text mode user interface
 - IRC admin backend
 - Multi-SOCKS5 support
     * with anonymous and username/password based authentication
-- Ident server support **Windows only!**
-- And many many more!
-
+- Ident server support
+- And a lot more!
 
 ### Licence
 * You can freely use/mod slFtp, but keep the source open.
 
 ## Join #slftp@LiNKNET
 
-#### slftp (c) 2006-2009 believe *** (c) 2009 Soulless Developer Team 
+#### slftp (c) 2006-2009 believe *** (c) 2009 Soulless Developer Team
